HP-51 in3 changes

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -400,7 +400,7 @@
 "Enable Apple Pay","Apple Pay inschakelen"
 "Your payment could not be processed","Uw betaling kon niet verwerkt worden"
 "Capayable Postpay","Capayable Achteraf Betalen"
-"Enable Capayable In3","Capayable In3 inschakelen"
+"Enable In3","In3 inschakelen"
 "Enable Capayable Postpay","Capayable Achteraf Betalen inschakelen"
 "In3 version","In3 versie"
 "The In3 version can be found in your Capayable contract.","De In3 versie is terug te vinden in uw Capayable contract."
