--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -404,3 +404,5 @@
 "Enable Capayable Postpay","Capayable Achteraf Betalen inschakelen"
 "In3 version","In3 versie"
 "The In3 version can be found in your Capayable contract.","De In3 versie is terug te vinden in uw Capayable contract."
+"Product Page","Product Pagina"
+"Card","Kaart"
