--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -90,6 +90,9 @@
 "Enable Alipay","Alipay inschakelen"
 "WeChatPay","WeChatPay"
 "Enable WeChatPay","WeChatPay inschakelen"
+"P24","P24"
+"Przelewy24","Przelewy24"
+"Enable Przelewy24","Przelewy24 inschakelen"
 "Giropay","Giropay"
 "Enable Giropay","Giropay inschakelen"
 "Refunding","Terugbetaling"
