--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -93,6 +93,8 @@
 "P24","P24"
 "Przelewy24","Przelewy24"
 "Enable Przelewy24","Przelewy24 inschakelen"
+"Trustly","Trustly"
+"Enable Trustly","Trustly inschakelen"
 "Giropay","Giropay"
 "Enable Giropay","Giropay inschakelen"
 "Refunding","Terugbetaling"
