--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -253,6 +253,7 @@
 "Eps","Eps"
 "Enable Eps","Eps inschakelen"
 "This is a required field.","Dit is een verplicht veld."
+"You should be at least 18 years old.","You should be at least 18 years old."
 "Enter Valid IBAN","Vul een geldig IBAN in"
 "Enter Valid BIC number","Vul een geldig BIC nummer in"
 " (Excl. Tax)"," (Excl. BTW)"
