BP-120 Magento 2 - BirthtDate AfterPay pre-validation

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -253,7 +253,7 @@
 "Eps","Eps"
 "Enable Eps","Eps inschakelen"
 "This is a required field.","Dit is een verplicht veld."
-"You should be at least 18 years old.","You should be at least 18 years old."
+"You should be at least 18 years old.","Je moet minimaal 18 jaar oud zijn."
 "Enter Valid IBAN","Vul een geldig IBAN in"
 "Enter Valid BIC number","Vul een geldig BIC nummer in"
 " (Excl. Tax)"," (Excl. BTW)"
