BP-89 Magento 2 - Apple Pay button on product page and shopping cart

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -412,3 +412,4 @@
 "The In3 version can be found in your Capayable contract.","De In3 versie is terug te vinden in uw Capayable contract."
 "Product Page","Product Pagina"
 "Card","Kaart"
+"Error: postcode is required","Error: postcode is required"
