--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -415,3 +415,6 @@
 "Error: postcode is required","Error: postcode is required",
 "Delivery costs","Bezorgkosten"
 "Discount","Korting"
+"Your paid successfully. Please finish your order","Uw betaling is succesvol verlopen. Rond uw bestelling af"
+"Pay remaining amount: %1 %2","Betaal resterende bedrag: %1 %2"
+"A partial payment of %1 %2 was successfully performed on a requested amount. Remainder amount %3 %4","Een deelbetaling van %1 %2 is succesvol uitgevoerd op openstaande bedrag. Resterende bedrag %3 %4"
