BP-189 Magento 2 - Giftcard: Show 'paid' Giftcards seperate

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -419,3 +419,4 @@
 "Apply Gift Card","Pas cadeaubonnen toe"
 "Pay remaining amount: %1 %2","Betaal resterende bedrag: %1 %2"
 "A partial payment of %1 %2 was successfully performed on a requested amount. Remainder amount %3 %4","Een deelbetaling van %1 %2 is succesvol uitgevoerd op openstaande bedrag. Resterende bedrag %3 %4"
+"Paid with","Betaald met"
