BP-312 Magento 2 - Add payment method POS - add info popup and order status checking

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -422,3 +422,5 @@
 "Pay remaining amount: %1 %2","Betaal resterende bedrag: %1 %2"
 "A partial payment of %1 %2 was successfully performed on a requested amount. Remainder amount %3 %4","Een deelbetaling van %1 %2 is succesvol uitgevoerd op openstaande bedrag. Resterende bedrag %3 %4"
 "Paid with","Betaald met"
+"Follow the instructions on the payment terminal","Volg de instructies op de betaalterminal"
+"Your order will be completed as soon as payment has been made","Uw bestelling wordt afgerond zodra de betaling is voldaan"
