--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -1,1 +1,2 @@
 "You should be at least 18 years old.","Sie müssen mindestens 18 Jahre alt sein."
+"Phone number should be correct.","Die telefonnummer sollte korrekt sein."
