BP-521 Magento 2 - Apple Pay checkout flow + button style

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -365,6 +365,9 @@
 "Frontend","Voorkant"
 "Backend","Achterkant"
 "Frontend and Backend","Voorkant en Achterkant"
+"Black","Zwart"
+"White","Wit"
+"White outline","Witte omtrek"
 "Select where this payment method will be available.","Selecteer waar deze betaalmethode beschikbaar zal zijn."
 "Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Payment Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.","Deze refund is niet mogelijk. Gedeeltelijke refunds gecombineerd met de payment fee kunnen alleen worden teruggestort via de Buckaroo Payment Plaza, zie ook het <a href="https://support.buckaroo.nl" target="_blank">KB artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Payment Plaza</a>."
 "Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Payment Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.",,"Deze refund is momenteel niet mogelijk, wij werken aan een oplossing! Credit Management refunds kunnen alleen worden teruggestort via de Buckaroo Payment Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Payment Plaza</a>."
