BP-544 - Added transaction for Payconiq, replaced data-hasrequired text

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -433,3 +433,4 @@
 "Follow the instructions on the payment terminal","Volg de instructies op de betaalterminal"
 "Your order will be completed as soon as payment has been made","Uw bestelling wordt afgerond zodra de betaling is voldaan"
 "The transaction has not been completed, please try again","De transactie is niet afgerond, probeer het opnieuw"
+"Cancel","Annuleren"
