BP-816 Add payment method Belfius

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -86,6 +86,8 @@
 "Please select a issuer from the list","Selecteer een bank uit de lijst"
 "SOFORT","SOFORT"
 "Enable SOFORT","SOFORT inschakelen"
+"Belfius","Belfius"
+"Enable Belfius","Belfius inschakelen"
 "Alipay","Alipay"
 "Enable Alipay","Alipay inschakelen"
 "WeChatPay","WeChatPay"
