--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -436,3 +436,6 @@
 "You have canceled the order. We kindly ask you to not complete the payment in the Bancontact app - Your order will not be processed. Place the order again if you still want to make the payment.","U heeft de bestelling geannuleerd. Indien u de QR code al heeft gescand, verzoeken wij u vriendelijk de betaling in de Bancontact app niet te voltooien - uw order zal niet verwerkt worden. Mocht u de betaling toch willen doen, plaats dan de bestelling opnieuw"
 "Scan the code below within 15 minutes with the ","Scan onderstaande code binnen 15 minuten met de"
 "Bancontact app","Bancontact app"
+"You must be 18 or older to pay for the products below","Je moet 18 jaar of ouder zijn om de onderstaande producten af te rekenen"
+"Age verification","Leeftijd verificatie"
+"Verify your age via iDIN","Verifiëren uw leeftijd via iDIN"
