BP-802 fix verification method iDIN

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -439,3 +439,4 @@
 "You must be 18 or older to pay for the products below","Je moet 18 jaar of ouder zijn om de onderstaande producten af te rekenen"
 "Age verification","Leeftijd verificatie"
 "Verify your age via iDIN","Verifiëren uw leeftijd via iDIN"
+"Select your bank","Selecteer uw bank"
