--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -70,7 +70,7 @@
 "Buckaroo sends an email to the customer with the payment procedures.","Vanuit Buckaroo wordt een e-mail verstuurd met de betaalinstructies."
 "Set to 'No' the customer is informed once online.","Bij de selectie 'Nee' wordt de klant eenmalig geinformeerd na het afronden van de order."
 "Due date (in days)","Verloop van termijn (in dagen)"
-"The amount of days after the order date in which the customer has to complete the payment. This is only for display purposes; you can add this due date in the template of the Transfer email.","Het aantal dagen na de orderdatum waarbinnen de klant de betaling moet hebben voldaan. Deze heeft alleen een weergavefunctie; u kunt deze vervaldatum opnemen in de template van de overboekingsemail"
+"The amount of days after the order date in which the customer has to complete the payment. After this period order will be cancelled. You can add this due date in the template of the Transfer email.","Het aantal dagen na de orderdatum waarbinnen de klant de betaling moet hebben voldaan. Na deze periode wordt de bestelling geannuleerd. U kunt deze vervaldatum opnemen in de template van de overboekingsemail"
 "Use credit management","Gebruik 'credit management'"
 "Buckaroo sends payment reminders to the customer.","Buckaroo verstuurt betaalherinneringen naar de klant."
 "Contact Buckaroo before activating Credit Management. By default this is excluded in the contract.","Voor het gebruik van credit management moet dit actief zijn in uw Buckaroo contract."
