BP-996 Add accept terms & conditions for Billink

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -301,6 +301,7 @@
 "Please make sure all fields are filled in correctly before proceeding.","Zorg ervoor dat alle velden correct ingevuld zijn voordat u doorgaat."
 "Not Applicable","Niet van toepassing"
 "Yes, I accept the terms and condition for the use of Afterpay.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Afterpay"
+"Accept terms of use","Accepteer gebruiksvoorwaarden"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=\"_blank\" href=\"%s\"> Laat het ons weten! </a>"
 "Buckaroo version","Buckaroo versie"
