--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -119,7 +119,7 @@
 "The (Merchant) Key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","De '(Merchant)Key' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Websites."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Voeg uw Buckaroo merchant guid toe."
-"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""De '(Merchant) Guid' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Details > Guid."
+"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","De '(Merchant) Guid' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Details > Guid."
 "Transaction label","Transactie label"
 "The transaction description in Payment Plaza.","De omschrijving van de transactie in Payment Plaza."
 "Certificate label","Certificaat label"
