--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -70,7 +70,7 @@
 "Buckaroo sends an email to the customer with the payment procedures.","Vanuit Buckaroo wordt een e-mail verstuurd met de betaalinstructies."
 "Set to 'No' the customer is informed once online.","Bij de selectie 'Nee' wordt de klant eenmalig geinformeerd na het afronden van de order."
 "Due date (in days)","Verloop van termijn (in dagen)"
-"The amount of days after the order date in which the customer has to complete the payment. This is only for display purposes; you can add this due date in the template of the Transfer email.","Het aantal dagen na de orderdatum waarbinnen de klant de betaling moet hebben voldaan. Deze heeft alleen een weergavefunctie; u kunt deze vervaldatum opnemen in de template van de overboekingsemail"
+"The amount of days after the order date in which the customer has to complete the payment. After this period order will be cancelled. You can add this due date in the template of the Transfer email.","Het aantal dagen na de orderdatum waarbinnen de klant de betaling moet hebben voldaan. Na deze periode wordt de bestelling geannuleerd. U kunt deze vervaldatum opnemen in de template van de overboekingsemail"
 "Use credit management","Gebruik 'credit management'"
 "Buckaroo sends payment reminders to the customer.","Buckaroo verstuurt betaalherinneringen naar de klant."
 "Contact Buckaroo before activating Credit Management. By default this is excluded in the contract.","Voor het gebruik van credit management moet dit actief zijn in uw Buckaroo contract."
@@ -119,7 +119,7 @@
 "The (Merchant) Key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","De '(Merchant)Key' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Websites."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Voeg uw Buckaroo merchant guid toe."
-"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""De '(Merchant) Guid' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Details > Guid."
+"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","De '(Merchant) Guid' staat weergegeven in Payment Plaza onder Mijn Buckaroo > Details > Guid."
 "Transaction label","Transactie label"
 "The transaction description in Payment Plaza.","De omschrijving van de transactie in Payment Plaza."
 "Certificate label","Certificaat label"
@@ -301,8 +301,9 @@
 "Please make sure all fields are filled in correctly before proceeding.","Zorg ervoor dat alle velden correct ingevuld zijn voordat u doorgaat."
 "Not Applicable","Niet van toepassing"
 "Yes, I accept the terms and condition for the use of Afterpay.","Ja, ik accepteer de algemene voorwaarden voor het gebruik van Afterpay"
+"Accept terms of use","Accepteer algemene voorwaarden"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
-"Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=\"_blank\" href=\"%s\"> Laat het ons weten! </a>"
+"Any comments about this Beta release? <a target=""_blank"" href=""%s""> Please let us know! </a>","Heeft u opmerkingen over deze Beta release? <a target=""_blank"" href=""%s""> Laat het ons weten! </a>"
 "Buckaroo version","Buckaroo versie"
 "The transaction will be processed using %s.","De betaling zal verwerkt worden in %s."
 "The order has already been processed.","De bestelling is reeds verwerkt."
@@ -341,13 +342,13 @@
 "Send payment email","Stuur betalingsmail"
 "Whether to use separate order/authorization and capture/invoice calls or to use a combined 'payment invitation' call.","Of er een aparte order/authorize en capture/invoice call gedaan wordt of dat er een samengestelde 'payment invitation' call gebruikt wordt."
 "The selected payment method does not support the selected currency or the store's base currency.","De geselecteerde betaalmethode ondersteund niet de geselecteerde valuta of de winkel's basisvaluta."
-"Invoice with id \"%1\" does not exist.","Er bestaat geen factuur met de id \"%1\""
+"Invoice with id ""%1"" does not exist.","Er bestaat geen factuur met de id ""%1"""
 "The payment of the Customer's payment will be outsourced to Buckaroo. The invoice indicates how to pay the invoice (after reception of goods and/or services). The invoice must be paid within 14 (fourteen) days after the invoice date.","De afhandeling van de betaling van de Klanten wordt uitbesteed aan Buckaroo. Op de factuur staat hoe u (na ontvangst van goederen en/of diensten) de factuur dient te betalen. De factuur dient binnen 14 (veertien) dagen na factuurdatum betaald te worden."
 "You must check this box to indicate that you agree to the terms and conditions.","U dient dit vakje aan te klikken om aan te geven dat u akkoord gaat met de algemene voorwaarden."
 "According to our system, you have canceled the payment. If this is not the case, please contact us.","Uw betaling is volgens ons systeem door u geannuleerd. Mocht dit niet het geval zijn, neem dan contact met ons op."
 "Default Configuration","Standaard opties"
 "Credit Management Enabled","Credit Management Inschakelen"
-"Credit Management Scheme Key. It can be found <a href="https://plaza.buckaroo.nl/Invoices/Scheme" target="_blank">here</a>. This requires the Buckaroo Credit Management subscription.","Credit Management Schema-key. Dit kan <a href="https://plaza.buckaroo.nl/Invoices/Scheme" target="_blank">hier</a> gevonden. Dit vereist een Buckaroo Credit Management Subscriptie."
+"Credit Management Scheme Key. It can be found <a href=""https://plaza.buckaroo.nl/Invoices/Scheme"" target=""_blank"">here</a>. This requires the Buckaroo Credit Management subscription.","Credit Management Schema-key. Dit kan <a href=""https://plaza.buckaroo.nl/Invoices/Scheme"" target=""_blank"">hier</a> gevonden. Dit vereist een Buckaroo Credit Management Subscriptie."
 "Credit Management payment methods","Credit Management betaalmethode"
 "Credit management steps","Credit management stappen"
 "Max level of the Credit Management steps.","Maximale niveau van de Credit Management stappen."
@@ -367,8 +368,8 @@
 "White","Wit"
 "White outline","Witte omtrek"
 "Select where this payment method will be available.","Selecteer waar deze betaalmethode beschikbaar zal zijn."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Payment Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.","Deze refund is niet mogelijk. Gedeeltelijke refunds gecombineerd met de payment fee kunnen alleen worden teruggestort via de Buckaroo Payment Plaza, zie ook het <a href="https://support.buckaroo.nl" target="_blank">KB artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Payment Plaza</a>."
-"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Payment Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.",,"Deze refund is momenteel niet mogelijk, wij werken aan een oplossing! Credit Management refunds kunnen alleen worden teruggestort via de Buckaroo Payment Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open een nieuw venster om naar de Buckaroo Payment Plaza</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Payment Plaza, see also the <a href=""https://support.buckaroo.nl"" target=""_blank"">KB article</a>.<br><a href=""https://plaza.buckaroo.nl"" target=""_blank"">Open a new window to the Buckaroo Payment Plaza</a>.","Deze refund is niet mogelijk. Gedeeltelijke refunds gecombineerd met de payment fee kunnen alleen worden teruggestort via de Buckaroo Payment Plaza, zie ook het <a href=""https://support.buckaroo.nl"" target=""_blank"">KB artikel</a>.<br><a href=""https://plaza.buckaroo.nl"" target=""_blank"">Open een nieuw venster om naar de Buckaroo Payment Plaza</a>."
+"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Payment Plaza.<br><a href=""https://plaza.buckaroo.nl"" target=""_blank"">Open a new window to the Buckaroo Payment Plaza</a>.","Deze refund is momenteel niet mogelijk, wij werken aan een oplossing! Credit Management refunds kunnen alleen worden teruggestort via de Buckaroo Payment Plaza.<br><a href=""https://plaza.buckaroo.nl"" target=""_blank"">Open een nieuw venster om naar de Buckaroo Payment Plaza</a>."
 "Webshops","Webshops"
 "Extensions","Extensies"
 "Commerce","Commerce"
@@ -391,7 +392,7 @@
 "Enter a desciption that the customer will recognize as the authorization here, e.g. your webshop or company name.","Vul hier een omschrijving in waarmee de klant de machtiging herkent, bijvoorbeeld uw webshop of bedrijfsnaam."
 "You have canceled the order. We kindly ask you to not complete the payment in the Payconiq app - Your order will not be processed. Place the order again if you still want to make the payment.","U heeft de bestelling geannuleerd. Indien u de QR code al heeft gescand, verzoeken wij u vriendelijk de betaling in de Payconiq app niet te voltooien - uw order zal niet verwerkt worden. Mocht u de betaling toch willen doen, plaats dan de bestelling opnieuw"
 "Identification number:","Identificatie nummer:"
-"(Or click here for the French translation: <a target=\"_blank\" href=\"%s\">terms and condition</a>.)","(Of klik hier voor de Franse vertaling: <a target=\"_blank\" href=\"%s\">aanvullende voorwaarden</a>.)"
+"(Or click here for the French translation: <a target=""_blank"" href=""%s"">terms and condition</a>.)","(Of klik hier voor de Franse vertaling: <a target=""_blank"" href=""%s"">aanvullende voorwaarden</a>.)"
 "You have canceled the order. We kindly ask you to not complete the payment in the Payconiq app - Your order will not be processed. Place the order again if you still want to make the payment.","U heeft de bestelling geannuleerd. Indien u de QR code al heeft gescand, verzoeken wij u vriendelijk de betaling in de Payconiq app niet te voltooien - uw order zal niet verwerkt worden. Mocht u de betaling toch willen doen, plaats dan de bestelling opnieuw"
 "Or CVV or CVC.","Of CVV of CVC"
 "A 3 or 4 digit code located to the right of signature strip on the back of your card, separate from the card number.","Een 3 of 4-cijferige code rechts van de handtekeningstrook op de achterkant van uw kaart, los van het kaartnummer."
