--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -221,6 +221,7 @@
 "Failed to create the creditmemo","Het is niet gelukt een creditmemo te creëren"
 "Payment Fee","Betaaltoeslag"
 "Refund failed ! Status : %1 and the order does not contain an invoice","Terugbetaling is mislukt ! Status : %1 en de order bevat geen factuur"
+"Skipped handling this push, duplicate","Behandeling van deze push overgeslagen, dupliceren"
 "Signature from push is incorrect","Signature van de push is onjuist"
 "Signature from push is correct but the order can not receive updates","Signature van de push is juist, maar de order kan niet langer updates verwerken"
 "There was no order found by transaction Id","Er is geen bestelling gevonden bij transactie ID"
