Add translation for 'Card number or pin not valid' message

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -443,3 +443,4 @@
 "Age verification","Leeftijd verificatie"
 "Verify your age via iDIN","Verifiëren uw leeftijd via iDIN"
 "Select your bank","Selecteer uw bank"
+"Card number or pin not valid',"Kaartnummer of pin ongeldig"
