--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -179,7 +179,7 @@
 "Support question:","Questions d'assistance:"
 "Support by email:","Autres questions par e-mail:"
 "Documentation","Documentation"
-"A list of documents regarding the extension.","Une liste de documents concernant l\'extension."
+"A list of documents regarding the extension.","Une liste de documents concernant l'extension."
 "Download a PDF format of the manual. Currently the manual is only available in English.","Télécharger un format PDF du manuel. Actuellement, le manuel n'est disponible qu'en anglais."
 "View the complete changelog of the module. Currently the changelog is only available in Dutch.","Voir le changelog complet du module. Actuellement, le journal des modifications n'est disponible qu'en néerlandais."
 "Installation Manual Buckaroo.pdf (NL)","Manuel d'installation Buckaroo.pdf (NL)"
@@ -217,7 +217,7 @@
 "-- Please Select --","-- Veuillez sélectionner --"
 "Buckaroo refund is disabled","Le remboursement Buckaroo est désactivé"
 "Buckaroo refund push validation failed","Échec de la validation push du remboursement Buckaroo"
-"The credit memo\'s total must be positive.","Le total de l\'avoir doit être positif."
+"The credit memo's total must be positive.","Le total de l'avoir doit être positif."
 "Failed to create the creditmemo","Échec de la création de la note de crédit"
 "Payment Fee","Frais de paiement"
 "Refund failed ! Status : %1 and the order does not contain an invoice","Le remboursement a échoué ! Statut: %1 et la commande ne contient pas de facture."
@@ -279,7 +279,7 @@
 "Before contacting Buckaroo technical support, please retrieve your (Merchant) key, Secret key, certificate and certificate thumbprint.","Avant de contacter le support technique de Buckaroo, veuillez récupérer votre clé (marchand), votre clé secrète, votre certificat et votre empreinte numérique."
 "A list of documents regarding the extension.","Une liste de documents concernant l'extension."
 "Installation and Configuration Manual Buckaroo.pdf","Manuel d'installation et de configuration Buckaroo.pdf"
-"View the complete release notes of the extension. Currently the release notes is only available in English.","Consultez les notes de version complètes de l\'extension. Actuellement, les notes de version ne sont disponibles qu\'en anglais."
+"View the complete release notes of the extension. Currently the release notes is only available in English.","Consultez les notes de version complètes de l'extension. Actuellement, les notes de version ne sont disponibles qu'en anglais."
 "Full Release Notes","Notes de version complètes"
 "(Excluding Tax)","(Hors tax)"
 "(Including Tax)","(Taxes comprises)"
@@ -291,24 +291,24 @@
 "Telephone:","Téléphone:"
 "Date of Birth:","Date de naissance:"
 "Bank Account Number:","Numéro de compte bancaire:"
-"Business Model:","Modèle d\'affaires:"
+"Business Model:","Modèle d'affaires:"
 "B2C - Business to Consumer","B2C - Entreprise à consommateur"
 "B2B - Business to Business","B2B - Entreprise à entreprise"
 "COC Number:","Numéro COC:"
-"Company Name:","Nom de l\'entreprise:"
+"Company Name:","Nom de l'entreprise:"
 "Cost Center:","Centre de coûts:"
 "VAT Number:","Numéro de TVA:"
 "Terms and Conditions:","Termes et conditions:"
 "Please make sure all fields are filled in correctly before proceeding.","Veuillez vous assurer que tous les champs sont remplis correctement avant de continuer."
 "Not Applicable","N'est pas applicable"
-"Yes, I accept the terms and condition for the use of Afterpay.","Oui, j\'accepte les termes et conditions d'utilisation d\'Afterpay."
+"Yes, I accept the terms and condition for the use of Afterpay.","Oui, j'accepte les termes et conditions d'utilisation d'Afterpay."
 "Accept terms of use","Accepter les conditions d'utilisation"
 "(DD/MM/YYYY)","(JJ/MM/AAAA)"
-"Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Des commentaires sur cette version bêta? <a target=\"_blank\" href=\"%s\"> S\'il vous plaît laissez-nous savoir!</a>"
+"Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Des commentaires sur cette version bêta? <a target=\"_blank\" href=\"%s\"> S'il vous plaît laissez-nous savoir!</a>"
 "Buckaroo version","Version Buckaroo"
 "The transaction will be processed using %s.","La transaction sera traitée en utilisant %s."
 "The order has already been processed.","La commande a déjà été traitée."
-"push notification for refund has no success status, ignoring.","la notification push pour le remboursement n\'a pas de statut de réussite, ignorée."
+"push notification for refund has no success status, ignoring.","la notification push pour le remboursement n'a pas de statut de réussite, ignorée."
 "Warning:","Avertissement"
 "Due to compound rounding errors in Magento when using currencies other than the store's base currency when creating refunds, the amount that you refund may be several cents more or less than you intended. If you wish to make sure that the correct amount is refunded, please create an offline refund and then  use Buckaroo's payment plaza to do the actual refund.","En raison d'erreurs d'arrondi composées dans Magento lors de l'utilisation de devises autres que la devise de base du magasin lors de la création de remboursements, le montant que vous remboursez peut être supérieur ou inférieur de plusieurs centimes à celui que vous aviez prévu. Si vous souhaitez vous assurer que le montant correct est remboursé, veuillez créer un remboursement hors ligne, puis utiliser la plateforme de paiement de Buckaroo pour effectuer le remboursement réel."
 "support.buckaroo.nl","support.buckaroo.eu"
@@ -343,7 +343,7 @@
 "Send payment email","Envoyer un e-mail de paiement"
 "Whether to use separate order/authorization and capture/invoice calls or to use a combined 'payment invitation' call.","Que ce soit pour utiliser des appels de commande/autorisation et de capture/facture séparés ou pour utiliser un appel combiné 'invitation de paiement'."
 "The selected payment method does not support the selected currency or the store's base currency.","Le mode de paiement sélectionné ne prend pas en charge la devise sélectionnée ou la devise de base du magasin."
-"Invoice with id \"%1\" does not exist.","La facture avec l'identifiant \"%1\" n\'existe pas."
+"Invoice with id \"%1\" does not exist.","La facture avec l'identifiant \"%1\" n'existe pas."
 "The payment of the Customer's payment will be outsourced to Buckaroo. The invoice indicates how to pay the invoice (after reception of goods and/or services). The invoice must be paid within 14 (fourteen) days after the invoice date.","Le paiement du paiement du Client sera sous-traité à Buckaroo. La facture indique comment payer la facture (après réception des biens et/ou services). La facture doit être payée dans les 14 (quatorze) jours suivant la date de facturation."
 "You must check this box to indicate that you agree to the terms and conditions.","Vous devez cocher cette case pour indiquer que vous acceptez les termes et conditions."
 "According to our system, you have canceled the payment. If this is not the case, please contact us.","Selon notre système, vous avez annulé le paiement. Si ce n'est pas le cas, veuillez nous contacter."
@@ -441,7 +441,7 @@
 "Scan the code below within 15 minutes with the ","Scannez le code ci-dessous dans les 15 minutes avec le"
 "Bancontact app","Application Bancontact"
 "You must be 18 or older to pay for the products below","Vous devez avoir 18 ans ou plus pour payer les produits ci-dessous"
-"Age verification","Verification de l\'AGE"
+"Age verification","Verification de l'AGE"
 "Verify your age via iDIN","Vérifiez votre âge via iDIN"
 "Select your bank","Sélectionnez votre banque"
 "Card number or pin not valid","Numéro de carte ou code non valide"
