BP-1933 Change gender selection for BNPL methods

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -287,6 +287,10 @@
 "Mr.","Meneer"
 "Mrs.","Mevrouw"
 "Unknown","Onbekend"
+"He/him","Hij/hem"
+"She/her","Zij/haar"
+"They/them","Zij/ze"
+"I prefer not to say","Ik zeg het liever niet"
 "Billing Name:","Factuurnaam:"
 "Telephone:","Telefoon:"
 "Date of Birth:","Geboortedatum:"
