--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -451,3 +451,4 @@
 "Card number or pin not valid","Kaartnummer of pin ongeldig"
 "Check with Buckaroo whether Client Side Encryption is enabled, otherwise transactions will fail. If in doubt, please contact us.","Controleer bij Buckaroo of Client Side Encryption is ingeschakeld, anders mislukken transacties. Bij twijfel, neem contact met ons op."
 "An anti-fraud rule has blocked this transaction automatically. Please contact the webshop.","Een anti-fraude regel heeft deze transactie automatisch geblokkeerd. Gelieve contact op te nemen met de webshop."
+"The refund has been initiated but it is waiting for a approval. Login to the Buckaroo Plaza to finalize the refund by approving it.","De refund is aangemaakt, maar deze wacht nog op goedkeuring. Log in op de Buckaroo Plaza om de refund definitief te maken door deze goed te keuren."
