Fix incorrect translation.

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -375,7 +375,7 @@
 "Extensions","Erweiterungen"
 "Commerce","Handel"
 "Your PHP version","Ihre PHP-Version"
-"Your order has been placed succesfully.","Ihre Bestellung wurde erfolgreich aufgegeben."
+"Your order has been placed successfully.","Ihre Bestellung wurde erfolgreich aufgegeben."
 "The payment methods of the Buckaroo Extension can be found under","Die Zahlungsmethoden der Buckaroo Extension finden Sie unter"
 "Configuration > Sales > Payment Methods > Buckaroo","Konfiguration > Verkauf > Zahlungsmethoden > Buckaroo"
 "You have canceled the order. We kindly ask you to not complete the payment in the Payconiq app - Your order will not be processed. Place the order again if you still want to make the payment.","Sie haben die Bestellung storniert. Wir bitten Sie, die Zahlung nicht in der Payconiq-App abzuschließen – Ihre Bestellung wird nicht bearbeitet. Geben Sie die Bestellung erneut auf, wenn Sie die Zahlung dennoch vornehmen möchten."
