Fix incorrect translation

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -379,7 +379,7 @@
 "Extensions","Extensies"
 "Commerce","Commerce"
 "Your PHP version","Uw PHP versie"
-"Your order has been placed succesfully.","Uw bestelling is succesvol geplaatst."
+"Your order has been placed successfully.","Uw bestelling is succesvol geplaatst."
 "The payment methods of the Buckaroo Extension can be found under","De betaalmethoden van de Buckaroo extensie staan onder"
 "Configuration > Sales > Payment Methods > Buckaroo","Configuratie > Sales > Betaalmethoden > Buckaroo"
 "You have canceled the order. We kindly ask you to not complete the payment in the Payconiq app - Your order will not be processed. Place the order again if you still want to make the payment.","U heeft de bestelling geannuleerd. Indien u de QR code al heeft gescand, verzoeken wij u vriendelijk de betaling in de Payconiq app niet te voltooien - uw order zal niet verwerkt worden. Mocht u de betaling toch willen doen, plaats dan de bestelling opnieuw"
