BP-1867 Rebranding Afterpay to Riverty

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -245,8 +245,8 @@
 "Adjustment Refund","Anpassungsrückerstattung"
 "Adjustment Fee","Anpassungsgebühr"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists, please choose a different payment method.","Leider ist bei der Verarbeitung Ihrer Zahlung ein Fehler aufgetreten. Bitte versuche es erneut. Wenn dieser Fehler weiterhin besteht, wählen Sie bitte eine andere Zahlungsmethode."
-"Afterpay","Afterpay"
-"Enable Afterpay","Afterpay activieren"
+"Riverty | Afterpay","Riverty | Afterpay"
+"Enable Riverty | Afterpay","Riverty | Afterpay activieren"
 "Giftcard","Geschenkkarte"
 "Enable Giftcard","Geschenkkarte aktivieren"
 "PayPerEmail","PayPerEmail"
