--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -245,8 +245,8 @@
 "Adjustment Refund","Aanpassingsbetaling"
 "Adjustment Fee","Aanpassingstoeslag"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists, please choose a different payment method.","Er is een fout opgetreden tijdens het verwerken van uw betaling. Probeer het opnieuw. Als deze fout aanhoudt, kies dan een andere betaalmethode."
-"Afterpay","Afterpay"
-"Enable Afterpay","Afterpay inschakelen"
+"Riverty | Afterpay","Riverty | Afterpay"
+"Enable Riverty | Afterpay","Riverty | Afterpay inschakelen"
 "Giftcard","Cadeaukaarten"
 "Enable Giftcard","Cadeaukaarten inschakelen"
 "PayPerEmail","PayPerEmail"
