--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -245,8 +245,8 @@
 "Adjustment Refund","Remboursement d'ajustement"
 "Adjustment Fee","Frais d'ajustement"
 "Unfortunately an error occurred while processing your payment. Please try again. If this error persists, please choose a different payment method.","Malheureusement, une erreur s'est produite lors du traitement de votre paiement. Veuillez réessayer. Si cette erreur persiste, veuillez choisir un autre mode de paiement."
-"Afterpay","Afterpay"
-"Enable Afterpay","Activer Afterpay"
+"Riverty | Afterpay","Riverty | Afterpay"
+"Enable Riverty | Afterpay","Activer Riverty | Afterpay"
 "Giftcard","Carte cadeau"
 "Enable Giftcard","Activer la carte-cadeau"
 "PayPerEmail","PayPerEmail"
