--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -301,7 +301,7 @@
 "Terms and Conditions:","Geschäftsbedingungen:"
 "Please make sure all fields are filled in correctly before proceeding.","Bitte stellen Sie sicher, dass alle Felder korrekt ausgefüllt sind, bevor Sie fortfahren."
 "Not Applicable","Unzutreffend"
-"Yes, I accept the terms and condition for the use of Afterpay.","Ja, ich akzeptiere die Nutzungsbedingungen für Afterpay."
+"Yes, I accept the terms and condition for the use of Riverty | Afterpay.","Ja, ich akzeptiere die Nutzungsbedingungen für Riverty | Afterpay."
 "Accept terms of use","Akzeptieren Sie die Allgemeinen Geschäftsbedingungen"
 "(DD/MM/YYYY)","(DD/MM/JJJJ)"
 "Any comments about this Beta release? <a target=\"_blank\" href=\"%s\"> Please let us know! </a>","Irgendwelche Kommentare zu dieser Beta-Version? <a target=\"_blank\" href=\"%s\"> Lass uns wissen! </a>"
